resources/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-dashboard
  namespace: kube-system
spec:
  redirectRegex:
    regex: "^/$"
    replacement: "/dashboard/"
    permanent: true
